# sysinfo

./: .gitignore  Cargo.toml  Cross.toml  build.rs  tmp.json
proto/: server_monitor.proto
src/: fetch_ip.rs  main.rs
src/dto/: ip_sb.rs  ipapi.rs  ipip.rs  mod.rs  server_info.rs
src/proto/: mod.rs  server_monitor.rs  server_monitor_client.rs
src/utils/: http_util.rs  mod.rs
