[package]
name = "sysinfo_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
sysinfo = "0.30.12"
tokio = { version = "1.37.0", features = ["full"] }
trust-dns-resolver = "0.23.2"
openssl = { version = "0.10", features = ["vendored"] }
