[package]
name = "sysinfo_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
reqwest = { version = "0.12", features = ["json"] }
anyhow = { default-features = false, version = "1.0" }
serde_json = { default-features = false, version = "1.0" }
sysinfo = { default-features = false, version = "0.30" }
tokio = { version = "1.38", features = ["full"], default-features = false }
